Fixed on mobile

--- a/flagcat/style.css
+++ b/flagcat/style.css
@@ -178,12 +178,12 @@ input:focus {
     align-items: center;
     opacity: 1;
     transition: opacity 0.2s;
-    pointer-events: all;
+    visibility: visible;
 }
 
 .modal.close {
     opacity: 0;
-    pointer-events: none;
+    visibility: hidden;
 }
 
 .info-box {
